[metadata]
name = ptf
description = The P4 Testing Framework
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/p4lang/ptf
author = P4 Developers
author_email = p4-dev@lists.p4.org
license = Apache-2.0
license_files = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
package_dir=
    =src
packages = find:
scripts = ptf, ptf_nn/ptf_nn_agent.py
platforms = any
python_requires = >=2.7, >=3
setup_requires =
    setuptools_scm
install_requires = file: requirements.txt

[options.packages.find]
where = src
